# PO-LGP

./: .gitignore  .jenkins_basic_build.sh  .mailmap  .sparkleshare  GUIDE  INSTALL  INTRO  Makefile  README.1604.md  README.archlinux  README.md  README.md.orig  README.pr2.md  README.student.md  README.ubuntu  SparkleShare.txt  fabfile.py  install_dependencies.sh  make-config  make-generic  mlr.files  mlr.includes  notes  test.cpp  todo
share/: .slicedef.cmake  CMakeLists.txt  GUIDE  Makefile  Makefile.gof  Makefile.swig  Script.sh  check_source.sh  make-config  make-config.default  make-generic  make-locked.sh  make-py.sh  mlr.files  mlr.includes  pcl_sprint.files  pcl_sprint.includes
share/configurations/: box.ppm  calib_P  calib_P_nik  camera.cfg.nils  filter  g4_source.g4c  g4_source_B-529B30007.g4s  g4_source_configuration.g4c  graspTest.ors  iCub.ors  iCub_mt.ors  schunk.ors  schunkHand.ors  schunkHand2.ors  schunkNik2.ors  schunkNikBench.ors  schunkNikTrimesh.ors  schunkNikdemo.ors  schunkNikolay.ors  schunkNilsLolly.ors  schunk_clean.ors
share/configurations/schunk_3d/: conv
share/data/: CMakeLists.txt  cabinet.ors  keywords.g  lockboxNew.ors  man_model.ors
share/data/apollo_model/: apollo.ors  apollo_clean.ors  apollo_nice.ors  apollo_orig.ors  apollo_right.ors  apollo_right2.ors  apollo_right3.ors
share/data/baxter_model/: HOWTO.sh  baxter-clean.ors  baxter-lockbox.ors  baxter-modifications.ors  baxter.ors
share/data/calibration/: pg_cam_13332472.yaml  pg_cam_13400115.yaml  pg_cam_13400136.yaml  pg_cam_14212563.yaml
share/data/configurations/: arm7.ors  camera.cfg.bad  g4_single_source_configuration.g4c  g4_source_configuration.g4c  graspTest.ors  iCub_mt.ors  schunkHand.ors  schunkHand2.ors  schunkLongerWrist.ors  schunkNik2.ors  schunkNikCyl.ors  schunkNikRect.ors  schunkNikTrimesh.ors  schunkNikolay.ors  table.ors  table.ors_old
share/data/door_model/: door.ors
share/data/drake_kuka/: HOWTO.sh  kuka.g  kuka_meshes  setup.g  wsg_meshes
share/data/g4data/: g4Shapes.ors
share/data/kuka_model/: kuka.ors  schunk_hand.ors
share/data/pomdp/: chainOfChains3-3level.POMDP  chainOfChains3.POMDP  chainOfChains3.POMDP.arr  chainOfChains3.ddgm.tabular  cheese-taxi-fully-observable.POMDP  cheese-taxi-more-observable.POMDP  cheese-taxi.POMDP  cheese.95.POMDP.arr  filter  hierarchicalHandwashing2.POMDP  hierarchicalHandwashing2.POMDP.arr  hierarchicalHandwashing2.ddgm.tabular  hierarchicalHandwashing2.mdp_arr  hierarchicalHandwashing2.mdp_fg  paint.95.POMDP.arr  paint.95.ddgm.tabular  paint.95.mdp_fg
share/data/pr2_meshes/: pr2_clean.ors  pr2_tree.ors
share/data/pr2_model/: HOWTO.sh  howto  meshTools  pr2-1-org.ors  pr2-2-clean.ors  pr2-3-comfi.ors  pr2_after.ors  pr2_arm.ors  pr2_clean.ors  pr2_clean_comfi.ors  pr2_clean_leftOnly.ors  pr2_coll.g  pr2_left.ors  pr2_left_arm.ors  pr2_model  pr2_modifications.ors  pr2_modify_fixGrippers.ors  pr2_modify_fixHead.ors  pr2_modify_fixRight.ors  pr2_move_groups.ors  pr2_org.ors  pr2_tree.ors  pr2ft-modifications.ors  urdf2ors.py
share/data/reba-human/: HOWTO.sh  baxter-clean.ors  human-clean.ors  human.ors  human.urdf
share/data/robotino/: HOWTO.sh  robotino.urdf
share/data/screwdriver/: screwdriver.ors
share/data/toolbox/: toolbox.ors
share/demo/motionPrimitives/: DummyCameraImage_L.ppm  MT.cfg  Makefile  behaviors.cpp  behaviors.h  main.cpp  schunk.ors
share/demo/pickAndPlace/: MT.cfg  Makefile  behaviors.cpp  behaviors.h  cleanKinect.sh  main.cpp  schunk.ors  schunk_3d
share/doc/: 11-codeDocu-perception.tex  16-ErwanLecarpentier.md  Array.doxy  MLR.doxy  Makefile  OldGrobiWiki.txt  Optim.tex  array_mainpage.doxy  code_improvements.dox  coding_convention.dox  conAct.bib  conAct.tex  control.tex  controlNotes.txt  g4_manual  guide.aux  guide.out  guide.tex  guide.toc  guides.txt  howTo.tex  howto_build_convex_meshes.dox  howto_calibrateG4.dox  howto_cmake.dox  howto_doxygen.dox  howto_git.dox  install_and_getting_started.dox  komo.tex  latex_conventions.dox  mlr.tex  ors.doxy  points_to_improve_the_code.tex  qt_creator_manual.md  relationalMachine.tex  soc.doxy  taskSpaces.tex
share/doc/11-Erler-MScDocumentation/: CVImage_8h_source.html  CameraModel_8h_source.html  ClusterConspicuousMap_8h_source.html  Common_8h_source.html  ConspicuousMapInterface_8h_source.html  DepthConspicuousMap_8h_source.html  FloodFillSegmentation_8h_source.html  GrabCutSegmentation_8h_source.html  Log_8h_source.html  ObjectDetector_8h_source.html  ObjectExplorationBash_8h_source.html  ObjectExplorationGUI_8h_source.html  ObjectExploration_8h_source.html  ObjectHypothesisGenerator_8h_source.html  PointCloudUtils_8h_source.html  annotated.html  (+70 more)
share/examples/: .slicedef.cmake  GUIDE
share/gofMake/: config.mk  config.mk.default  config.mk.mine  createMakefileLinks.sh  createMakefileLinks_sub.sh  defines.mk  generic.mk  make-generic  make-path.sh  run-path.sh
share/include/: ANN  JointState.h  libcolorseg
share/libArray/: Makefile  make-config  make-generic
share/obsolete/: make-config.default
share/pkgconfig/: mlr_gui.pc.in
share/projects/: CMakeLists.txt
share/slices/: Array.tar.incl  FOL.README.md  FOL.config.mk  FOL.incl  KOMO.README.md  KOMO.config.mk  KOMO.excl  KOMO.incl  LGP.README.md  LGP.excl  LGP.incl  MLcourse.README.md  MLcourse.config.mk  MLcourse.incl  MiniNet.README.md  MiniNet.config.mk  MiniNet.incl  Motion.config.mk  Motion.tar.incl  OpenGL.config.mk  OpenGL.excl  OpenGL.incl  Optim.README.md  Optim.excl  Optim.incl  Optim.tar.incl  Racer.tar.incl  Relational.README.md  Relational.config.mk  Relational.excl  Relational.incl  RoboticsCourse.README.md  RoboticsCourse.incl  RoboticsCourse.make-config  RoboticsCourse.tar.incl  default.excl  default.incl  tar.excl  tar.incl
share/src/: .slicedef.cmake  MLR.dox  astyle.sh  headache.header  headache.sh  style.astyle  style.sed  style.sed.sh
share/teaching/: .slicedef.cmake  CMakeLists.txt  create_std_mk.sh
share/test/: README.txt  jenkins_run_tests.py
share/unittest/: .slicedef.cmake  CMakeLists.txt
share/utils/: install_dependencies.sh
(+8799 files in other folders)
