add_subdirectory(./RoboticsCourse/04-rrt)
add_subdirectory(./RoboticsCourse/roboticsCourse9)
add_subdirectory(./RoboticsCourse/roboticsCourse12)
add_subdirectory(./RoboticsCourse/08-pinBalancing)
add_subdirectory(./RoboticsCourse/05-car)
add_subdirectory(./RoboticsCourse/02-pegInAHole)
add_subdirectory(./RoboticsCourse/roboticsCourse11)
add_subdirectory(./RoboticsCourse/03-dynamics)
add_subdirectory(./RoboticsCourse/roboticsCourse3)
add_subdirectory(./RoboticsCourse/roboticsCourse8)
add_subdirectory(./RoboticsCourse/roboticsCourse10)
add_subdirectory(./RoboticsCourse/06-kalmanSLAM)
add_subdirectory(./RoboticsCourse/01-kinematics)
add_subdirectory(./RoboticsCourse/roboticsCourse6)
add_subdirectory(./RoboticsCourse/07-cartPole)
add_subdirectory(./RoboticsCourse/10-racerRegression)
add_subdirectory(./RoboticsCourse/09-racer)
add_subdirectory(./AutonomousSystems/e08-OpenCV)
add_subdirectory(./MachineLearningCourse/07-RL)
add_subdirectory(./MachineLearningCourse/02-carData)
add_subdirectory(./MachineLearningCourse/06-hmmBinary)
add_subdirectory(./MachineLearningCourse/xx-usps)
add_subdirectory(./MachineLearningCourse/05-kernelPCA)
add_subdirectory(./MachineLearningCourse/08-RL)
add_subdirectory(./MachineLearningCourse/03-outlier)
add_subdirectory(./MachineLearningCourse/digits)
add_subdirectory(./MachineLearningCourse/04-mixtures)
add_subdirectory(./MachineLearningCourse/01-linearModels)
add_subdirectory(./MachineLearningCourse/xx-setFit)
